--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 				<li><a href="#services">Funcionalidades</a></li>
 				<li><a href="#teams">Equipe</a></li>
 				<li><a href="#contact">Contato</a></li>
+				<li><a href="https://sigurb.furg.br/map2d.html" target="_blank" rel="noopener noreferrer">Mapa 2D</a></li>
+				<li><a href="https://sigurb.furg.br/webviewer/viewer.html?3dWebScene=mapa3d.3ws" target="_blank" rel="noopener noreferrer">Mapa 3D</a></li>
+				<li><a href="https://sigurb.furg.br/patrimonio.html" target="_blank" rel="noopener noreferrer">Patrimônio</a></li>
+				<li><a href="https://sigurb.furg.br/portaria/login.form.php" target="_blank" rel="noopener noreferrer">Portaria</a></li>
 			</ul>
 			<div class="menu-btn">
 				<ion-icon name="menu-outline"></ion-icon>
@@ -35,21 +39,21 @@
 	<section class="home" id="home">
 		<div class="max-width">
 			<div class="home-content">
+				<img src="imagens/sigurb-cn.png" width="220px" height="250px">
+				<div class="text-2">SiGUrb</div>
 				<div class="text-1">Sistema de Gerenciamento Urbanístico</div>
-				<div class="text-2"></div>
-				<a href="#contact">Contatar-me</a>
+				<div>
+				<a href="https://sigurb.furg.br/map2d.html" target="_blank" rel="noopener noreferrer">Mapa 2D</a>
+				<a href="https://sigurb.furg.br/webviewer/viewer.html?3dWebScene=mapa3d.3ws" target="_blank" rel="noopener noreferrer">Mapa 3D</a>
+				</div>
 				<div class="icons">
-					<a href="https://www.instagram.com/neaifurg/"><ion-icon name="logo-instagram"></ion-icon></a>
+					<a href="https://www.instagram.com/neaifurg/" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-instagram"></ion-icon></a>
+					<a href="https://api.whatsapp.com/send?phone=555332935242&text=Ol%C3%A1" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-whatsapp"></ion-icon></a>
 				</div>
 			</div>
 		</div>
-		<div class="centro">
-			<img src="imagens/sigurb-cn.png" width="300px" height="370px">
-		</div>
 		
 	</section>
-
-
 
 	<!--sessao sobre-->
 	<section class="about" id="about">
@@ -60,9 +64,38 @@
 					
 				<br><br>O sistema em desenvolvimento, é baseado em um SIG (Sistema de Informações Geográficas), o qual será composto de um banco de dados referente a inúmeras informações do Campus, tais como, localização e identificação das edificações, infraestrutura viária (vias, estacionamentos, ciclovias, passarelas, etc.), zoneamentos, áreas com restrições ambientais e arqueológicas, rotas acessíveis para pessoas com deficiência, entre outras informações.
 
-				<br><br>Através do site também serão disponibilizados mapas 2D e 3D de toda área do Campus, os quais poderão ser acessados por usuários devidamente cadastrados e autorizados. O diferencial desses mapas, é a interação com os usuários, os quais poderão sugerir alterações, reportar problemas e adicionar informações em qualquer área do Campus, que serão enviadas à equipe técnica para avaliação.</div>
+				<br><br>Através do site também serão disponibilizados mapas 2D e 3D de toda área do Campus, os quais poderão ser acessados por usuários devidamente cadastrados e autorizados. O diferencial desses mapas, é a interação com os usuários, os quais poderão sugerir alterações, reportar problemas e adicionar informações em qualquer área do Campus, que serão enviadas à equipe técnica para avaliação.
+				</div>
+
+				<div class="card">
+					<div class="box">
+						<a href="neai.html" target="_blank" rel="noopener noreferrer"><img src="imagens/neai.png"></a>
+					</div>	
+				</div>
+				<div class="card">
+					<div class="box">
+						<a href="lamu.html" target="_blank" rel="noopener noreferrer"><img src="imagens/lamu.png"></a>
+					</div>
+
+				</div>
+				<div class="card">
+					<div class="box">
+						<a href="srm.html" target="_blank" rel="noopener noreferrer"><img src="imagens/srm.png"></a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="box">
+						<a href="ga.html" target="_blank" rel="noopener noreferrer"><img src="imagens/ga.png"></a>
+					</div>
+				</div>
+				<div class="card">
+					<div class="box">
+						<a href="gepi.html" target="_blank" rel="noopener noreferrer"><img src="imagens/gepi.png"></a>
+					</div>
+				</div>
+
 			</div>
-		</div>
+		</div>	
 	</section>
 
 	<!--sessao serviços-->
@@ -72,65 +105,63 @@
 			<div class="serv-content">
 				<div class="card">
 					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
+					<img src="imagens/mobilidade.png" width="100px" height="100px">
 					<div class="text">Acessibilidade e mobilidade</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
-					<img src="imagens/localize-removebg.png" width="100px" height="100px">
-					<div class="text">Localização das edificações</div>
+						<img src="imagens/localize.png" width="100px" height="100px">
+						<div class="text">Localização das edificações</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
+					<img src="imagens/sinalizacao.png" width="100px" height="100px">
 					<div class="text">Sinalização Viária</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
-					<div class="text">Reportar um problema</div>
+					<img src="imagens/feedback.png" width="100px" height="100px">
+					<div class="text">Reportar um problema<br></div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
-					<div class="text">Arborização</div>
-					</div>
-				</div>
-				<div class="card">
-					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
-					<div class="text">Reservar sala</div>
-					</div>
-				</div>
-				<div class="card">
-					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
-					<div class="text">Estudo de eficiência energética</div>
+					<img src="imagens/arborizacao.png" width="100px" height="100px">
+					<div class="text">Arborização<br>&nbsp</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
-					<img src="imagens/mobilidade-removebg.png" width="100px" height="100px">
-					<div class="text">Equipamentos urbanos</div>
+					<img src="imagens/reserva-sala.png" width="100px" height="100px">
+					<div class="text">Reservar sala<br>&nbsp</div>
 					</div>
 				</div>
 
+				<div class="card">
+					<div class="box">
+					<img src="imagens/eficiencia-energetica.png" width="80px" height="80px">
+					<div class="text-menor">Estudo de <br>eficiência<br>energética</div>
+					</div>
+				</div>
 
+				<div class="card">
+					<div class="box">
+						<img src="imagens/equipamentos-urbanos.png" width="100px" height="100px">
+						<div class="text">Equipamentos urbanos</div>
+					</div>
+				</div>
 
 			</div>
 		</div>
 	</section>
-
-	
 
 	<!--sessao equipe-->
 	<section class="teams" id="teams">
@@ -139,46 +170,74 @@
 			<div class="carousel  owl-carousel">
 				<div class="card">
 					<div class="box">
-						<img src="imagens/imagem1.png" alt="">
-						<div class="text">Pessoa</div>
-						<a href="#Home">Ver mais</a>
-					</div>
-				</div>
-
-				<div class="card">
-					<div class="box">
-						<img src="imagens/imagem2.png" alt="">
-						<div class="text">Pessoa</div>
-						<a href="#Home">Ver mais</a>
+						<img src="imagens/adilson.png" alt="">
+						<div class="text">Adilson</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
 						<img src="imagens/imagem3.png" alt="">
-						<div class="text">Pessoa</div>
-						<a href="#Home">Ver mais</a>
+						<div class="text">Pércoles</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="box">
+						<img src="imagens/imagem3.png" alt="">
+						<div class="text">Amanda Borges</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
 						<img src="imagens/imagem4.png">
-						<div class="text">Pessoa</div>
-						<a href="#Home">Ver mais</a>
+						<div class="text">Andrei</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="box">
+						<img src="imagens/imagem4.png">
+						<div class="text">Alexandre</div>
+					</div>
+				</div>
+
+								<div class="card">
+					<div class="box">
+						<img src="imagens/imagem4.png">
+						<div class="text">Rafaela</div>
+					</div>
+				</div>
+
+								<div class="card">
+					<div class="box">
+						<img src="imagens/imagem4.png">
+						<div class="text">Renata</div>
+					</div>
+				</div>
+
+								<div class="card">
+					<div class="box">
+						<img src="imagens/imagem4.png">
+						<div class="text">Thalita</div>
 					</div>
 				</div>
 
 				<div class="card">
 					<div class="box">
 						<img src="imagens/imagem5.png">
-						<div class="text">Pessoa</div>
-						<a href="arquivos/Bela/home.html">Ver mais</a>
+						<div class="text">José</div>
 					</div>
 				</div>
-
 			</div>
+
+			<div class="verMais">
+				<a href="equipe.html" target="_blank" rel="noopener noreferrer">Ver toda equipe</a>
+			</div>
+			
 		</div>
+
 	</section>
 
 	<!--sessao contato -->
@@ -191,16 +250,16 @@
 					<p></p>
 					<div class="icons">
 						<div class="row">
-							<ion-icon name="person-outline"></ion-icon>
+							<ion-icon name="call-outline"></ion-icon>
 							<div class="info">
-								<div class="head">Nome</div>
-								<div class="sub-title"></div>
+								<div class="head">Telefone:</div>
+								<div class="sub-title">(53)32935242</div>
 							</div>
 						</div>
 						<div class="row">
 							<ion-icon name="earth-outline"></ion-icon>
 							<div class="info">
-								<div class="head">Endereço</div>
+								<div class="head">Endereço:</div>
 								<div class="sub-title"> Brasil, Rio Grande do Sul, Rio Grande<br>
               					Campus Carreiros: Av. Itália km 8 Bairro Carreiros</div>
 							</div>
@@ -208,8 +267,10 @@
 						<div class="row">
 							<ion-icon name="mail-outline"></ion-icon>
 							<div class="info">
-								<div class="head">Email</div>
+								<div class="head">Email:</div>
 								<div class="sub-title">lamu@furg.br</div>
+								<div class="sub-title">neai.laboratorio@furg.br</div>
+								
 							</div>
 						</div>
 					</div>
@@ -252,7 +313,7 @@
 	</section>
 
 	<footer>
-		<span><a href="#">RODAPÉ</a> | Todos os direitos reservados.</span>
+		<span><a href="https://www.furg.br/">FURG</a> 2022 | Todos os direitos reservados.</span>
 	</footer>
 
 	<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
